# GifCreator2

./: CMakeLists.txt  GifCreatorUtils.hpp  build.sh  clean.sh  main.cpp
